--- a/.github/workflows/CI_check_integration_format.yml
+++ b/.github/workflows/CI_check_integration_format.yml
@@ -9,4 +9,4 @@ jobs:
 
     - name: Ensure no hyphens
       run: |
-        find . -name "*-*" -type d -maxdepth 2 | grep integrations
+        find -name "*-*" -type d -maxdepth 2 | grep integrations
