--- a/.github/workflows/CI_check_integration_format.yml
+++ b/.github/workflows/CI_check_integration_format.yml
@@ -6,7 +6,9 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Ensure no hyphens
-      run: |
-        find -name "*-*" -type d -maxdepth 2 | grep integrations
+      - name: Ensure no hyphens
+        run: |
+          find -name "*-*" -type d -maxdepth 2 | grep integrations
