--- a/.github/workflows/CI_check_integration_format.yml
+++ b/.github/workflows/CI_check_integration_format.yml
@@ -12,3 +12,4 @@ jobs:
       - name: Ensure no hyphens
         run: |
           find -name "*-*" -type d -maxdepth 2 | grep integrations
+          test $? -eq 1 || echo "Names of folders in ./integrations must not contain hyphens"
