--- a/.github/workflows/pinecone.yml
+++ b/.github/workflows/pinecone.yml
@@ -25,8 +25,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # Pinecone tests are time expensive, so the matrix is limited to Python 3.9 and 3.10
         os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v4
