--- a/.github/workflows/pinecone.yml
+++ b/.github/workflows/pinecone.yml
@@ -17,6 +17,7 @@ concurrency:
 env:
   PYTHONUNBUFFERED: "1"
   FORCE_COLOR: "1"
+  PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
 
 jobs:
   run:
