--- a/integrations/pinecone/pyproject.toml
+++ b/integrations/pinecone/pyproject.toml
@@ -49,8 +49,9 @@ dependencies = [
 ]
 [tool.hatch.envs.default.scripts]
 # Pinecone tests are slow (require HTTP requests), so we run them in parallel
-test = "pytest -n auto --dist worksteal {args:tests}"
-test-cov = "coverage run -m pytest -n auto --dist worksteal {args:tests}"
+# with pytest-xdist (https://pytest-xdist.readthedocs.io/en/stable/distribution.html)
+test = "pytest -n auto --maxprocesses=3 {args:tests}"
+test-cov = "coverage run -m pytest -n auto --maxprocesses=3 {args:tests}"
 cov-report = [
   "- coverage combine",
   "coverage report",
