hatch lint, errors, labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,4 +1,9 @@
 # Integrations
+integration:amazon-bedrock:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/amazon_bedrock/**/*"
+      - any-glob-to-any-file: ".github/workflows/amazon_bedrock.yml"
+
 integration:chroma:
   - changed-files:
       - any-glob-to-any-file: "integrations/chroma/**/*"
