Add cohere chat generator (#88)
* add cohere chat generator

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* remove chat_message.py

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* add unit and integration tests

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* improve tests

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* fix lint errors

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* fix lint errors(1)

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* 1. add releasenote
2. add doc strings
3. change metadata to match other chat generators

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* 1. Adds ChatRole and convert default role to Cohere compliant role
2. Adds a unit test for 1

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

* remove releasenotes

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>

---------

Signed-off-by: sunilkumardash9 <sunilkumardash9@gmail.com>
Co-authored-by: Massimiliano Pippi <mpippi@gmail.com>

--- a/integrations/cohere/pyproject.toml
+++ b/integrations/cohere/pyproject.toml
@@ -174,7 +174,9 @@ ignore_missing_imports = true
 addopts = "--strict-markers"
 markers = [
   "integration: integration tests",
+  "unit: unit tests",
   "embedders: embedders tests",
   "generators: generators tests",
+  "chat_generators: chat_generators tests",
 ]
 log_cli = true
