unit test marker

--- a/integrations/amazon_bedrock/pyproject.toml
+++ b/integrations/amazon_bedrock/pyproject.toml
@@ -178,6 +178,7 @@ ignore_missing_imports = true
 [tool.pytest.ini_options]
 addopts = "--strict-markers"
 markers = [
+  "unit: unit tests",
   "integration: integration tests",
   "embedders: embedders tests",
   "generators: generators tests",
