--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10"]
 
     steps:
       - uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
 
       - name: Lint
         working-directory: integrations/ollama
-        if: matrix.python-version == '3.9'
+        if: matrix.python-version == '3.10'
         run: hatch run lint:all
 
       - name: Run Ollama
