--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -47,9 +47,10 @@ jobs:
       - name: Run Ollama
         working-directory: integrations/ollama
         run: |
-          curl https://ollama.ai/install.sh | sh
-          ollama pull orca-mini
-          ollama serve
+          curl -L https://ollama.ai/download/ollama-linux-amd64 -o /usr/bin/ollama
+          chmod +x /usr/bin/ollama
+          /usr/bin/ollama pull orca-mini
+          /usr/bin/ollama serve
 
       - name: Run tests
         working-directory: integrations/ollama
