--- a/integrations/google_ai/pyproject.toml
+++ b/integrations/google_ai/pyproject.toml
@@ -163,3 +163,11 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+[[tool.mypy.overrides]]
+module = [
+  "google.*",
+  "haystack.*",
+  "pytest.*",
+  "numpy.*",
+]
+ignore_missing_imports = true
