--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -14,6 +14,11 @@ integration:elasticsearch:
       - any-glob-to-any-file: "integrations/elasticsearch/**/*"
       - any-glob-to-any-file: ".github/workflows/elasticsearch.yml"
 
+integration:google-ai:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/google_ai/**/*"
+      - any-glob-to-any-file: ".github/workflows/google_ai.yml"
+
 integration:google-vertex:
   - changed-files:
       - any-glob-to-any-file: "integrations/google_vertex/**/*"
@@ -47,7 +52,7 @@ integration:qdrant:
 integration:pinecone:
   - changed-files:
       - any-glob-to-any-file: "integrations/pinecone/**/*"
-      - any-glob-to-any-file: ".github/workflows/pinecone.yml"      
+      - any-glob-to-any-file: ".github/workflows/pinecone.yml"
 
 integration:unstructured-fileconverter:
   - changed-files:
