--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -28,8 +28,17 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: ["3.9","3.10","3.11"]
-
+    services:
+      ollama:
+        image: ollama/ollama:latest
+        ports:
+          - 11434:11434
+        options: --name ollama
+        
     steps:
+      - name: Pull the LLM in the Ollama service
+        run: docker exec ollama ollama pull ${{ env.LLM_FOR_TESTS }}
+    
       - uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
@@ -44,12 +53,6 @@ jobs:
         working-directory: integrations/ollama
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
-
-      - name: Run Ollama container
-        working-directory: integrations/ollama
-        run: |
-          docker run -d -p 11434:11434 --name ollama ollama/ollama:latest
-          docker exec ollama ollama pull ${{ env.LLM_FOR_TESTS }}
 
       - name: Run tests
         working-directory: integrations/ollama
