bring name back

--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -31,6 +31,7 @@ jobs:
     services:
       ollama:
         image: ollama/ollama:latest
+        options: --name ollama
         ports:
           - 11434:11434
         
