Fix mypy llama_cpp import

--- a/integrations/llama_cpp/pyproject.toml
+++ b/integrations/llama_cpp/pyproject.toml
@@ -179,6 +179,7 @@ addopts = [
 [[tool.mypy.overrides]]
 module = [
     "haystack.*",
-    "pytest.*"
+    "pytest.*",
+    "llama_cpp.*"
 ]
 ignore_missing_imports = true
