--- a/integrations/chroma/pyproject.toml
+++ b/integrations/chroma/pyproject.toml
@@ -69,7 +69,7 @@ dependencies = [
   "numpy",  # we need the stubs from the main package
 ]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/chroma_haystack tests}"
+typing = "mypy --install-types --non-interactive --explicit-package-bases {args:src/ tests}"
 style = [
   "ruff {args:.}",
   "black --check --diff {args:.}",
@@ -141,7 +141,7 @@ unfixable = [
 exclude = ["example"]
 
 [tool.ruff.isort]
-known-first-party = ["chroma_haystack"]
+known-first-party = ["src"]
 
 [tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "parents"
@@ -151,16 +151,15 @@ ban-relative-imports = "parents"
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["chroma_haystack", "tests"]
+source_pkgs = ["src", "tests"]
 branch = true
 parallel = true
 omit = [
-  "src/chroma_haystack/__about__.py",
   "example"
 ]
 
 [tool.coverage.paths]
-chroma_haystack = ["src/chroma_haystack", "*/chroma-haystack/src/chroma_haystack"]
+chroma_haystack = ["src/haystack_integrations", "*/chroma-haystack/src/chroma_haystack"]
 tests = ["tests"]
 
 [tool.coverage.report]
@@ -181,6 +180,7 @@ markers = [
 module = [
   "chromadb.*",
   "haystack.*",
+  "haystack_integrations.*",
   "pytest.*"
 ]
 ignore_missing_imports = true
